Fix layout bugs

--- a/src/assets/css/mixin.scss
+++ b/src/assets/css/mixin.scss
@@ -44,6 +44,9 @@ $color-error: #f00;
 	@include breakpoint(tablet) {
 		font-size: 14px;
 	}
+	@include breakpoint(mobile) {
+		font-size: 12px;
+	}
 }
 .font-large {
 	font-size: 24px;
@@ -72,7 +75,7 @@ $color-error: #f00;
 		font-size: 40px;
 	}
 	@include breakpoint(mobile) {
-		font-size: 28px;
+		font-size: 24px;
 	}
 }
 
