--- a/src/components/company/company.scss
+++ b/src/components/company/company.scss
@@ -102,12 +102,19 @@
 		@include breakpoint(tablet) {
 			padding: 0 30px;
 		}
+		@include breakpoint(mobile) {
+			padding: 0;
+		}
 	}
 	.stats-item {
 		display: inline-block;
 		padding: 0 35px;
 		@include breakpoint(mobile) {
-			padding: 10px;
+			padding-left: 10px;
+			padding-right: 0;
+			&:first-child {
+				padding-left: 0;
+			}
 		}
 		.stats-info {
 			padding-left: 100px;
